fix slide overflow

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -200,6 +200,7 @@ button {
 	max-height: calc(100vh - 95px);
 	max-width: 1440px;
 	outline: 1px solid var(--outline-color);
+	overflow: hidden;
 	position: relative;
 }
 
